library/general/gpuworkloadresources/samples/non-gpu-pod/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-gpu-pod
spec:
  containers:
    - name: web
      image: nginx:1.25
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "500m"
